# r2d2_ros_foxy

./: README.md
r2d2_robot_description/: package.xml  setup.cfg  setup.py
r2d2_robot_description/config/: r2d2.rviz  ros2_controllers.yaml  rviz_controllers.yaml
r2d2_robot_description/launch/: gazebo.py  rviz.py
r2d2_robot_description/r2d2_robot_description/: head_driver.py  movement_driver.py  spawn_entity.py
r2d2_robot_description/urdf/: general_macros.xacro  materials.xacro  r2d2.gazebo.xacro  r2d2.urdf.xacro  r2d2_body.urdf.xacro  r2d2_control.urdf.xacro  r2d2_leg.urdf.xacro  r2d2_rviz.urdf.xacro
