<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2d2_robot_description</name>
  <version>0.0.0</version>
  <description>
    This package contains the robot model and controls for my r2d2 model.
    This package is used for educational purposes only as a personal project that others could enjoy.
  </description>
  <maintainer email="robert.forristall@knights.ucf.edu">Robert Forristall</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>robot_state_publisher<exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
